<resources>
    <string name="app_name">Angry Port Scanner</string>

    <string name="swipe_down_to_scan_the_network">Swipe down to scan the network</string>
    <string name="device_icon">Device Icon</string>
    <string name="interfaces_submenu">Interfaces</string>
    <string name="preferences_submenu">Preferences</string>
    <string name="snackbar_copy_message">Copied "{{text-to-copy}}" to the Clipboard</string>
    <string name="title_network_overview">Network {interface_name}</string>
    <string name="title_device_detail">Device {deviceIp}</string>
    <string name="title_card_device_info">Device Information</string>
    <string name="field_name_device_name">Device Name</string>
    <string name="field_name_device_type">Device Type</string>
    <string name="field_name_device_ip">Device IP</string>
    <string name="field_name_device_mac">Device MAC</string>
    <string name="field_name_vendor_name">Vendor Name</string>
    <string name="title_open_ports">Open Ports</string>
    <string name="this_device">This device</string>
    <string name="error_network_not_found">Network not found</string>
    <string name="hideMacAddressDetails">Hide MAC Address Details</string>
    <string name="device_type_pc">PC</string>
    <string name="device_type_vm">Virtual machine</string>
    <string name="device_type_phone">Phone/Tablet</string>
    <string name="device_type_speaker">Speaker</string>
    <string name="device_type_soc">System on chip</string>
    <string name="device_type_router">Router</string>
    <string name="device_type_network_device">Network device</string>
    <string name="device_type_game_console">Game console</string>
    <string name="device_type_cast">Cast</string>
    <string name="device_type_unknown">Unknown</string>
    <string name="device_type_home_appliance">Home Appliance</string>


    <string name="action_settings">Settings</string>

    <string name="preferences_timeout_title">Connect timeout</string>
    <string name="preferences_timeout_summary">Timeout of a port connection in millisecondes</string>
    <string name="preferences_discover_method_title">Discover Method</string>
    <string name="preferences_discover_method_summary">Change to different method of host discovery</string>
    <string name="preferences_discover_method_title_dialog">Choose a method</string>
    <string name="preferences_ip_start_title">IP start</string>
    <string name="preferences_ip_start_summary">First IP address to scan</string>
    <string name="preferences_ip_custom_title">Custom IP range</string>
    <string name="preferences_ip_custom_summary">Manually set start IP</string>

    <string name="preferences_error4">Error: Value is not a valid IP address !</string>
    <string name="copy">Copy</string>
    <string name="preferences_scan_all_title">Scan all hosts</string>
    <string name="preferences_scan_all_summry">Scan dead hosts which don\'t replay to pings.</string>
    <string name="no_ports">No open ports</string>
    <string name="scanning">Scanning</string>
    <string name="display">Display</string>
    <string name="ports">Ports</string>
    <string name="preferences_error5">Error: enter threads number</string>
    <string name="preferences_error6">Error: enter timeout in ms</string>
    <string name="key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmCG8X807kHMOK4FR10Su900hudZvyNOYoqFjtrv2aoXofNDm7G/N8lqhz59nxIlFv+zT1aNodiOpqAN8U+BkkcCS82Jr8QmzeDIaJCZMhLwJZaZwkQfNhn5gzXVH3o/l25U4xNAhT1/8qvS5OulwEMjQjTnNs22hw+BFCXovkO/5Xin/P8L0J0xWoV+oPmj0xonzSZrqxwgisiCWlBbPS2GF+xc18QadU05X1p3c2HIMQ86hndHlVtjDtGUwHTV/XhZzr2JYrWLI+H4LvyYIcWt2r05eGb7JX/0JQX4DeLoqBcKJHEA2Z0VL70aQqTPdDaVkNlhM4zRKAieYV6ajxQIDAQAB</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="export_csv_report">Export CSV Report</string>

    <string-array name="method_discover_name">
        <item>INet only (Fastest , Less accurate)</item>
        <item>INet with ports (Recommended)</item>
        <item>ICMP Ping (Slow)</item>
    </string-array>

    <string-array name="result_names">
        <item>With open ports only</item>
        <item>Open ports or alive</item>
        <item>All hosts</item>
    </string-array>

    <string-array name="sort_by">
        <item>Default</item>
        <item>Name</item>
        <item>Date</item>
        <item>Type</item>
    </string-array>

    <string-array name="group_by">
        <item>Default</item>
        <item>Group Option 1</item>
        <item>Group Option 2</item>

    </string-array>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">default</string>
    <string name="fcm_message">FCM Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_search">Saved Search</string>
</resources>
