<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:overScrollMode="always">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardCornerRadius="16dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_card_device_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <osama.com.angryportscanner.ui.widgets.BadgeImageView
                    android:id="@+id/deviceIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:padding="2dp"
                    android:tint="@color/gray"
                    app:srcCompat="@drawable/ic_baseline_router_48"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:stretchColumns="*"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_name_device_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        <TextView
                            android:id="@+id/deviceNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_name_device_type"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        <TextView
                            android:id="@+id/deviceTypeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_name_device_ip"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        <TextView
                            android:id="@+id/deviceIpTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_name_device_mac"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        <TextView
                            android:id="@+id/deviceHwAddressTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/field_name_vendor_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        <TextView
                            android:id="@+id/deviceVendorTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary" />

                    </TableRow>


                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_open_ports"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <osama.com.angryportscanner.ui.RecyclerViewCommon
            android:id="@+id/list"
            android:name="osama.com.angryportscanner.DeviceInfoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingBottom="32dp"
            android:layout_marginRight="16dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.DeviceInfoFragment"
            tools:listitem="@layout/fragment_port_item" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
